# Praedor

./: CMakeLists.txt
Character-Creator/: Character-Creator.pro  character.cpp  character.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  structs.h
build-Character-Creator-Desktop_Qt_5_9_0_MinGW_32bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-Character-Creator-Desktop_Qt_5_9_0_MinGW_32bit-Debug/debug/: moc_mainwindow.cpp
